# sak

./: .env.example  .gitignore  API.md  Cargo.toml  DEVIATIONS_AND_MISSING.md  DX-REPORT.md  Dockerfile  FINAL_STATUS.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  INTEGRATE.md  PHASE1_2_SUMMARY.md  PHASE4_5_SUMMARY.md  README.md  SAK-1_BUILD_PHASES.md  SAK.md  SAK_BUILD_PHASES.md  STATUS.md  agent.md  calude_to_list.md  final_submission.md  index.html  railway.json  railway.toml  rules.yaml
.github/workflows/: ci.yml  deploy-github-pages.yml
.superstack/: submission.html
crates/sak-bin/: Cargo.toml
crates/sak-bin/src/: main.rs
crates/sak-core/: Cargo.toml
crates/sak-core/src/: error.rs  lib.rs  types.rs
crates/sak-covalent/: Cargo.toml
crates/sak-covalent/src/: lib.rs
crates/sak-encrypt/: Cargo.toml
crates/sak-encrypt/src/: lib.rs
crates/sak-guardian/: Cargo.toml
crates/sak-guardian/src/: evaluator.rs  lib.rs  rules.rs  simulator.rs
crates/sak-guardian/tests/: evil_corpus.rs  packs_load.rs
crates/sak-ika/: Cargo.toml
crates/sak-ika/src/: lib.rs
crates/sak-jito/: Cargo.toml
crates/sak-jito/src/: lib.rs
crates/sak-reflex/: Cargo.toml
crates/sak-reflex/src/: config.rs  lib.rs  router.rs  subscriber.rs
crates/sak-sdk/: Cargo.toml
crates/sak-sdk/src/: lib.rs
crates/sak-state/: Cargo.toml
crates/sak-state/src/: lib.rs  schema.rs
demo/: README.md
demo/SAK Guardian Design System/: SKILL.md
demo/SAK Guardian Design System/preview/: buttons.html  colors-neutrals.html  radii.html  type-body.html  type-display.html
demo/SAK Guardian Design System/ui_kits/dashboard/: Dashboard.jsx  FlowDiagram.jsx  Header.jsx  LiveTrace.jsx  LogCard.jsx  colors_and_type.css  tokens.css
demo/preview/: card-allowed.html  card-blocked.html  colors-semantic.html  elevation.html  flow-diagram.html  logo.html  pills.html  stat-tiles.html  type-surgena-weights.html
demo/race-server/: API.md  Cargo.toml  openapi.yaml
demo/race-server/src/: main.rs
demo/race-ui/: index.html  package-lock.json  package.json  vite.config.ts
demo/race-ui/src/: App.tsx  index.css
demo/tx-generator/: Cargo.toml
demo/tx-generator/src/: main.rs
demo/ui_kits/dashboard/: Dashboard.jsx  FeedbackBar.jsx  LiveStats.jsx  README.md  index.html
docs/: sak-docs.json
docs/api/: README.md  race-server.md  sak-guardian.md  sak-sdk.md
docs/rule-packs/: verified-mints.txt
packs/: defaults.yaml  exploits-blocklist.yaml  solana-core.yaml  tokens-blocklist.yaml
scripts/: bundle-static-demo.sh  create-squads-account.ts  deploy-devnet-demo.sh  gen-rule-packs.py  package-lock.json  package.json
skills/hackathon-social-playbook/: skill.md
skills/sak-solana-agent-kernel/: skill.md
throwaway/throwaway-a/: Cargo.toml
throwaway/throwaway-a/src/: main.rs
throwaway/throwaway-b/: Cargo.toml
throwaway/throwaway-b/src/: main.rs
throwaway/throwaway-c/: Cargo.toml
throwaway/throwaway-c/src/: main.rs
