[workspace]
resolver = "2"
members = [
    "crates/sak-core",
    "crates/sak-reflex",
    "crates/sak-guardian",
    "crates/sak-state",
    "crates/sak-sdk",
    "crates/sak-bin",
    "demo/tx-generator",
    "demo/race-server",
]

# Throwaway programs are isolated workspaces in throwaway/throwaway-{a,b,c}/
# They each have incompatible Solana SDK version pins and must be built separately.

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
# Solana modular crates — versions proven by throwaway-b/c
litesvm = "0.11"
solana-keypair = "3"
solana-message = "3"
solana-transaction = "3"
solana-signer = "3"
solana-address = "2"
solana-account = "3"
solana-system-interface = "3"
solana-instruction = "3"
