[package]
name = "sak-guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
litesvm = { workspace = true }
solana-transaction = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-message = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
solana-keypair = { workspace = true }
solana-transaction = { workspace = true }
solana-signer = { workspace = true }
solana-address = { workspace = true }
solana-system-interface = { workspace = true }
solana-instruction = { workspace = true }
