[package]
name = "sak-reflex"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
yellowstone-grpc-client = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
rand = "0.8"
