[package]
name = "sak-reflex"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { version = "5", default-features = false, features = ["tonic"] }
tonic = { workspace = true, features = ["transport", "tls", "tls-native-roots"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
rand = "0.8"
