[package]
name = "sak-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
sak-reflex = { path = "../sak-reflex" }
sak-guardian = { path = "../sak-guardian" }
sak-state = { path = "../sak-state" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
