[package]
name = "sak-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
sak-guardian = { path = "../sak-guardian" }
sak-reflex = { path = "../sak-reflex" }
sak-state = { path = "../sak-state" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
solana-transaction = { workspace = true }
