[package]
name = "sak-state"
version = "0.1.0"
edition = "2021"

[dependencies]
sak-core = { path = "../sak-core" }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# Light Protocol SDK for ZK compression (Pillar 3)
light-sdk = { workspace = true }
light-compressed-token = { workspace = true }
light-compressed-account = { workspace = true }
