[package]
name = "race-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
