[package]
name = "race-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.24"
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sak-guardian = { path = "../../crates/sak-guardian" }
sak-reflex  = { path = "../../crates/sak-reflex" }
sak-core = { path = "../../crates/sak-core" }
sak-covalent = { path = "../../crates/sak-covalent" }
sak-jito = { path = "../../crates/sak-jito" }
litesvm = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-signer = { workspace = true }
solana-address = { workspace = true }
solana-system-interface = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-account = { workspace = true }
rand = "0.8"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
anyhow = { workspace = true }
