[package]
name = "tx-generator"
version = "0.1.0"
edition = "2021"

 [dependencies]
sak-guardian = { path = "../../crates/sak-guardian" }
sak-core = { path = "../../crates/sak-core" }
tokio = { workspace = true, features = ["full"] }
serde_json = "1"
rand = "0.8"
litesvm = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-signer = { workspace = true }
solana-address = { workspace = true }
solana-system-interface = { workspace = true }
solana-instruction = { workspace = true }
solana-compute-budget-interface = { workspace = true }
uuid = { version = "1", features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
