[workspace]

[package]
name = "throwaway-a"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yellowstone-grpc-client = "5"
yellowstone-grpc-proto = "5"
futures = "0.3"
bs58 = "0.5"
