[workspace]

[package]
name = "throwaway-b"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
litesvm = "0.11"
solana-address = "2"
solana-keypair = "3"
solana-signer = "3"
solana-message = "3"
solana-transaction = "3"
solana-system-interface = "3"
